@@ -30,6 +30,7 @@ Revision history for DBIx::Class
           SQL_INTEGER, resulting in silent conversion to '-1'
         - Fix pre 5.10 failures of t/55namespaces_cleaned.t due to buggy
           require() (RT#68814)
+        - Oracle autoinc inserts no longer leave open cursors behind
 
 0.08192 2011-05-10 04:20 (UTC)
     * Fixes
